Move gearman chat to Matrix
IRC has been dead for years, and Freenode is compromised horribly by a
recent ownership transfer. This link will work as long as I pay my
Element bill.

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ safe: true
 lsi: false
 highlighter: rouge
 relative_permalinks: false
-baseurl: http://gearman.org
+url: "http://gearman.org"
+baseurl: ""
